Header spacing fixed. SCSS installed.

--- a/client/src/components/Header/Logo/Logo.scss
+++ b/client/src/components/Header/Logo/Logo.scss
@@ -1,6 +1,7 @@
 .logo{
-    float: left;
-   
+    
+    align-content: space-between;
+
 }
 .company-name {
     padding-left: 50px;
